welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:6: error: value esle is not a member of Nothing
possible cause: maybe a semicolon is missing before `value esle'?
	} esle {
          ^icyHot:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if ((temp1<0 && temp2>100) || (temp2<0 && temp1>100)) 
        ^